--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node ./server/server.js",
+    "ngstart": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,6 +28,9 @@
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
+  },
+  "engines": {
+    "node": "8.4.0"
   },
   "devDependencies": {
     "@angular/cli": "1.5.0",
